infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: asia.gcr.io/ticketing-dev-494806/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-srv
spec:
  selector:
    app: order-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
