infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: asia.gcr.io/ticketing-dev-494806/payment
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-srv
spec:
  selector:
    app: payment-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
